home page layout + styling.. TODO: partners logos + small alignment fixes

--- a/src/components/toolbar/styles.css
+++ b/src/components/toolbar/styles.css
@@ -14,9 +14,11 @@
 
 li, a, button {
     font-family: "Nunito", sans-serif;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 16px;
-    color: black;
+    color: #4f7cbd;
+    line-height: 1.6;
+    letter-spacing: 2px;
     text-decoration: none;
 }
 
@@ -49,7 +51,7 @@ button {
 
 button {
     padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
+    background-color:#4f7cbd;
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -57,5 +59,5 @@ button {
 }
 
 button:hover {
-    background-color: rgba(0,136,169,10.8);
+    background-color: green;
 }
